# qitsune

./: LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
jupyter/: 01_portfolio_optimization.ipynb  C1_portfolio_optimization.ipynb  runbook.ipynb  tutorial_magics.py
qitsune/: main.py
qitsune/classical/: processor.py
qitsune/quantum/: processor.py
tutorials/: 01_portfolio_optimization.ipynb  11_time_series.ipynb
